# CPrimerPlus

./: CMakeLists.txt
Chapter2/: fathm_ft.c  first.c  nogood.c  stillbad.c  two_func.c
Chapter3/: altnames.c  badcount.c  bases.c  charcode.c  eacape.c  platinum.c  print1.c  print2.c  showf_pt.c  typesize.c
Chapter4/: defines.c  flags.c  floatcnv.c  floats.c  input.c  intconv.c  longstrg.c  pizza.c  praise1.c  praise2.c  printout.c  prntval.c  skip2.c  stringf.c  talkback.c  varwid.c  width.c
Chapter5/: shoes1.c
