cmake_minimum_required(VERSION 3.19)

get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId} C)

set(CMAKE_C_STANDARD 11)

file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
foreach(file ${files})
    get_filename_component(name ${file} NAME)
    add_executable(${name} ${file})
endforeach()

add_executable(first Chapter2/first.c)
add_executable(fathm_ft Chapter2/fathm_ft.c)
add_executable(two_func Chapter2/two_func.c)
add_executable(nogood Chapter2/nogood.c)
add_executable(stillbad Chapter2/stillbad.c)

add_executable(platinum Chapter3/platinum.c)
add_executable(print1 Chapter3/print1.c)
add_executable(bases Chapter3/bases.c)
add_executable(print2 Chapter3/print2.c)
add_executable(charcode Chapter3/charcode.c)
add_executable(altnames Chapter3/altnames.c)
add_executable(showf_pt Chapter3/showf_pt.c)
add_executable(typesize Chapter3/typesize.c)
add_executable(badcount Chapter3/badcount.c)
add_executable(eacape Chapter3/eacape.c)

add_executable(talkback Chapter4/talkback.c)
add_executable(praise1 Chapter4/praise1.c)
add_executable(praise2 Chapter4/praise2.c)
add_executable(pizza Chapter4/pizza.c)
add_executable(defines Chapter4/defines.c)
add_executable(printout Chapter4/printout.c)
add_executable(width Chapter4/width.c)
add_executable(floats Chapter4/floats.c)
add_executable(flags Chapter4/flags.c)
add_executable(stringf Chapter4/stringf.c)
add_executable(intconv Chapter4/intconv.c)
add_executable(floatcnv Chapter4/floatcnv.c)
add_executable(prntval Chapter4/prntval.c)
add_executable(longstrg Chapter4/longstrg.c)
add_executable(input Chapter4/input.c)
add_executable(varwid Chapter4/varwid.c)
add_executable(skip2 Chapter4/skip2.c)
